# cursor-projects

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: aws-profile.mdc
docs/: MIGRATION_TO_INFRA.md  RESULTS_TXT_NOT_UPDATING.md  UNIT_TESTS.md
lambda-src/: README.md  lambda_function.py
scripts/: run_full_pipeline.py  run_transcript_only.py
tests/: test_extract_transcript.py  test_lambda_handler.py  test_run_transcript_only.py
transcription-demo-infra/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
transcription-demo-infra/lambda/: lambda_function.py
transcription-demo-infra/scripts/: bundle_lambda.sh  cdk-deploy.sh  verify_deployment.sh
transcription-demo-infra/transcription_demo_infra/: __init__.py  infra_stack.py  lambda_stack.py
