[project]
name = "transcription-demo"
version = "0.1.0"
description = "End-to-end demo for LambdaFunctionSummarize (Transcribe → Lambda → Bedrock)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.28.0",
    "jinja2>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
